--- a/templates/_static/_navbar.html
+++ b/templates/_static/_navbar.html
@@ -18,10 +18,10 @@
             <div class="container-xl">
                 <ul class="navbar-nav">
                     {{ nav_item('/index/', 'home', 'Home') }}
-                    {{ nav_item('/air_pollution/', 'wind', 'Air Pollutants') }}
-                    {{ nav_item('./form-elements.html', 'lungs', 'Health Recommendations') }}
-                    {{ nav_item('./form-elements.html', 'person-running', 'Activity Analysis') }}
-                    {{ nav_item('/scenario_analysis/', 'chart-simple', 'Scenario Analysis') }}
+                    {{ nav_item('/air-pollutants/', 'wind', 'Indoor Air Pollutants') }}
+                    {{ nav_item('/index/', 'lungs', 'Health Recommendations') }}
+                    {{ nav_item('/index/', 'person-running', 'Activity Analysis') }}
+                    {{ nav_item('/scenario-analysis/', 'chart-simple', 'Scenario Analysis') }}
                 </ul>
             </div>
         </div>
