--- a/templates/air-pollutant.html
+++ b/templates/air-pollutant.html
@@ -1,25 +1,13 @@
-{% extends 'base-air-pollutants.html' %}
+{% extends 'base-air-pollutant.html' %}
 
-{% block title %}{{ pollutant | upper }} - Human Digital Twin | TwinAIR{% endblock %}
+{% block title %}{{ pollutant | upper }}{% endblock %}
 
 {% block content %}
 <div class="page">
-    <!-- Page header -->
-    <div class="page-header d-print-none" id="breadcrumb">
-        <div class="container-xl">
-            <div class="row g-2 align-items-center">
-                <div class="col">
-                    <!-- Page pre-title -->
-                    <div class="page-pretitle">
-                        Historical Data of Air Pollutants
-                    </div>
-                    <h2 class="page-title">
-                      Indoor {{ pollutant | upper }}
-                    </h2>
-                </div>
-            </div>
-        </div>
-    </div>
+
+    <!-- Page breadcrumb -->
+    {% from '_static/_breadcrumb.html' import render_breadcrumb %}
+    {{ render_breadcrumb('Historical Data of Air Pollutants', 'Indoor ' ~ pollutant | upper) }}
 
     <!-- Page body -->
     <div class="page-body" id="chart">
