--- a/templates/air-pollutants.html
+++ b/templates/air-pollutants.html
@@ -1,81 +1,27 @@
-{% extends 'base-air-pollutants.html' %}
+{% extends 'base-air-pollutant.html' %}
 
-{% block title %}Air Pollutants - Human Digital Twin | TwinAIR{% endblock %}
+{% block title %}Indoor Air Pollutants{% endblock %}
 
 {% block content %}
 <div class="page">
-    <!-- Page header -->
-    <div class="page-header d-print-none" id="breadcrumb">
-        <div class="container-xl">
-            <div class="row g-2 align-items-center">
-                <div class="col">
-                    <div class="page-pretitle">
-                        Indoor Air Pollutants
-                    </div>
-                    <h2 class="page-title">
-                        All pollutants
-                    </h2>
-                </div>
-            </div>
-        </div>
-    </div>
+
+    <!-- Page breadcrumb -->
+    {% from '_static/_breadcrumb.html' import render_breadcrumb %}
+    {{ render_breadcrumb('Human Digital Twin', 'Indoor Air Pollutants') }}
 
     <!-- Page body -->
-    <div class="page-body" id="chart">
+    <div class="page-body">
         <div class="container-xl">
-            <div class="row row-cards row-deck">
-                <div class="col-md-2 col-lg-2">
-                    <div class="card">
-                        <div class="card-body">
-                            <h3 class="card-title">
-                                PM1.0
-                                <a href="page1.html" class="arrow-link" style="margin-left: 10px;">
-                                    <i class="fas fa-arrow-right"></i>
-                                </a>
-                            </h3>
-                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2 col-lg-2">
-                    <div class="card">
-                        <div class="card-body">
-                            <h3 class="card-title">
-                                PM2.5
-                                <a href="page2.html" class="arrow-link" style="margin-left: 10px;">
-                                    <i class="fas fa-arrow-right"></i>
-                                </a>
-                            </h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2 col-lg-2">
-                    <div class="card">
-                        <div class="card-body">
-                            <h3 class="card-title">
-                                PM5.0
-                                <a href="page3.html" class="arrow-link" style="margin-left: 10px;">
-                                    <i class="fas fa-arrow-right"></i>
-                                </a>
-                            </h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2 col-lg-2">
-                    <div class="card">
-                        <div class="card-body">
-                            <h3 class="card-title">
-                                PM10
-                                <a href="page4.html" class="arrow-link" style="margin-left: 10px;">
-                                    <i class="fas fa-arrow-right"></i>
-                                </a>
-                            </h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-lg-4 mt-5">
-                    <h1>Particle Matters</h1><br>
-                </div>
+            <div class="row row-cards">
+
+                {% from 'air-pollutants-macro.html' import render_pollutant_card, render_jumbotron %}
+
+                {{ render_jumbotron('Indoor Air Pollutants', 'Track your historical air pollutant data measured by hardware and wearable devices in your indoor environment.') }}
+
+                {% for pollutant, data in pollutants_info.items() %}
+                    {{ render_pollutant_card(data.pollutant_name, data.pollutant_desc, data.pollutant_href) }}
+                {% endfor %}
+
             </div>
         </div>
     </div>
