--- a/templates/index-card-health-recommendations.html
+++ b/templates/index-card-health-recommendations.html
@@ -8,8 +8,8 @@
                 </div>
             </div>
             <div class="card-body">
-                <h3 class="card-title">High CO2 concentration</h3>
-                <p class="text-muted">The concentration of CO2 within this indoor space has surpassed safe limits,
+                <h3 class="text-red card-title">High CO2 concentration</h3>
+                <p class="">The concentration of CO2 within this indoor space has surpassed safe limits,
                     suggesting inadequate ventilation and posing serious health risks, including headaches, dizziness,
                     and impaired cognitive function, necessitating immediate action to improve air quality.</p>
             </div>
@@ -20,12 +20,12 @@
             <div class="card-stamp">
                 <div class="card-stamp-icon bg-green">
                     <img class="icon" src="{{ url_for('static', filename='icons/mood-good-white.svg') }}"
-                         alt="Mood Sick">
+                         alt="Mood Good">
                 </div>
             </div>
             <div class="card-body">
-                <h3 class="card-title">Low PMs concentration</h3>
-                <p class="text-muted">The concentration of PMs within your indoor space is in the range of the safe
+                <h3 class="text-green card-title">Low PMs concentration</h3>
+                <p class="">The concentration of PMs within your indoor space is in the range of the safe
                     limits, suggesting minimal health risks.</p>
             </div>
         </div>
@@ -35,12 +35,12 @@
             <div class="card-stamp">
                 <div class="card-stamp-icon bg-green">
                     <img class="icon" src="{{ url_for('static', filename='icons/mood-good-white.svg') }}"
-                         alt="Mood Sick">
+                         alt="Mood Good">
                 </div>
             </div>
             <div class="card-body">
-                <h3 class="card-title">Low TVOCs concentration</h3>
-                <p class="text-muted">The concentration of TVOCs within your indoor space is in the range of the safe
+                <h3 class="text-green card-title">Low TVOCs concentration</h3>
+                <p class="">The concentration of TVOCs within your indoor space is in the range of the safe
                     limits, suggesting minimal health risks.</p>
             </div>
         </div>
