--- a/templates/base-air-pollutant.html
+++ b/templates/base-air-pollutant.html
@@ -15,8 +15,10 @@
     <!-- Import FontAwesome stylesheets -->
     <link href="{{ url_for('static', filename='css/fontawesome.all.min.css') }}" rel="stylesheet">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
+    {% block additional_css %}{% endblock %}
 </head>
 <body>
     {% block body %}
@@ -51,7 +53,8 @@
         <script src="{{ url_for('static', filename='js/apex-charts.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/apex-chart-styles.js') }}"></script>
 
-        <script src="{{ url_for('static', filename='js/index-get-sensor-data.js') }}"></script>
+        <!-- Custom apexChart implementation for TwinAIR HDT -->
+        <script src="{{ url_for('static', filename='js/air-pollutants-chart.js') }}"></script>
 
     {% endblock %}
 </body>
