--- a/templates/base-health-recommendations.html
+++ b/templates/base-health-recommendations.html
@@ -15,8 +15,7 @@
     <!-- Import FontAwesome stylesheets -->
     <link href="{{ url_for('static', filename='css/fontawesome.all.min.css') }}" rel="stylesheet">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.min.js"></script>
-
+    {% block additional_css %}{% endblock %}
 </head>
 <body>
     {% block body %}
@@ -47,11 +46,8 @@
         <!-- Import jQuery library -->
         <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
 
-         <!-- Import ApexChart library -->
-        <script src="{{ url_for('static', filename='js/apex-charts.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/apex-chart-styles.js') }}"></script>
-
-        <script src="{{ url_for('static', filename='js/index-get-sensor-data.js') }}"></script>
+        <!-- Import jQuery library -->
+        <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
 
     {% endblock %}
 </body>
