--- a/templates/base-virtual-sensing.html
+++ b/templates/base-virtual-sensing.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block title %}Human Digital Twin | TwinAIR{% endblock %}</title>
-    <!-- Common CSS files -->
+
+    <title>{% block title %} {% endblock %} - Human Digital Twin | TwinAIR</title>
+
+    <!-- Import HDT theming core .css files -->
     <link href="{{ url_for('static', filename='css/tabler.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/twinair.css') }}" rel="stylesheet">
+
+    <!-- Import FontAwesome stylesheets -->
+    <link href="{{ url_for('static', filename='css/fontawesome.all.min.css') }}" rel="stylesheet">
 
 </head>
 <body>
     {% block body %}
+
         <div class="page">
-            <!-- Common header -->
-            {% include 'header.html' %}
-            <!-- Common navbar -->
-            {% include 'navbar.html' %}
+            <!-- Include the header of the TwinAIR HDT -->
+            {% include '_static/_header.html' %}
+            <!-- Include the navbar of the TwinAIR HDT -->
+            {% include '_static/_navbar.html' %}
 
             <div class="page-wrapper">
                 {% block content %}
@@ -24,14 +31,24 @@
                 {% endblock %}
             </div>
 
-            {% include 'footer.html' %}
+            <!-- Include the footer of the TwinAIR HDT -->
+            {% include '_static/_footer.html' %}
         </div>
 
-        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
+        <!-- Import HDT theming core libraries -->
         <script src="{{ url_for('static', filename='js/demo-theme.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/demo.min.js') }}"></script>
+
+        <!-- Import Bootstrap library -->
+        <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
+
+        <!-- Import jQuery library -->
+        <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+
+         <!-- Import ApexChart library -->
+        <script src="{{ url_for('static', filename='js/apex-charts.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/apex-chart-styles.js') }}"></script>
+
         <script type="module" src="{{ url_for('static', filename='js/_route_virtual_sensing/main.js') }}"></script>
 
     {% endblock %}
