--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 
 {% block content %}
 <div class="page">
+
     <!-- Page header -->
     <div class="page-header d-print-none">
         <div class="container-xl">
@@ -15,7 +16,7 @@
                 <div class="col">
                     <!-- Page pre-title -->
                     <div class="page-pretitle">
-                        Overview
+                        Human Digital Twin
                     </div>
                     <h2 class="page-title">
                         Dashboard
@@ -40,31 +41,13 @@
 
     {% import 'index-macros.html' as macros %}
 
-    {{ macros.jumbotron('Indoor Air Pollutants', 'Track the measurements of indoor PMs, VOCs and NOx that captured in your indoor environment during the last 24-hours. ' ) }}
+    {{ macros.jumbotron('Indoor Air Pollutants', 'Track the indoor air pollutants captured by your wearable device in real-time.' ) }}
 
     <div class="page-body">
-        <div class="container-xl">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div id="hourly-air-pollutants-pm"></div>
-                </div>
-            </div>
-        </div>
-
-        <div class="container-xl">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div id="hourly-air-pollutants-nox"></div>
-                </div>
-                <div class="col-lg-6">
-                    <div id="hourly-air-pollutants-vocs"></div>
-                </div>
-            </div>
-        </div>
-
+        {{ macros.chart('index-chart-co2') }}
+        {{ macros.chart('index-chart-tvoc') }}
     </div>
 
 </div>
-
 
 {% endblock %}
