HDT - Version 1.2 - October 2024

--- a/templates/_static/_navbar.html
+++ b/templates/_static/_navbar.html
@@ -20,7 +20,7 @@
                     {{ nav_item('/index/', 'home', 'Home') }}
                     {{ nav_item('/air-pollutants/', 'wind', 'Indoor Air Pollutants') }}
                     {{ nav_item('/index/', 'lungs', 'Health Recommendations') }}
-                    {{ nav_item('/index/', 'person-running', 'Activity Analysis') }}
+                    {{ nav_item('/activity-status/', 'person-running', 'Activity Analysis') }}
                     {{ nav_item('/scenario-analysis/', 'chart-simple', 'Scenario Analysis') }}
                 </ul>
             </div>
